--- a/.gitattributes
+++ b/.gitattributes
@@ -25,11 +25,11 @@
 *.html            text diff=html
 *.inc             text
 *.ini             text
-*.js              text
-*.mjs             text
-*.cjs             text
-*.json            text
-*.jsx             text
+*.js              text eol=lf # @see https://eslint.org/docs/latest/rules/linebreak-style#using-this-rule-with-version-control-systems
+*.mjs             text eol=lf
+*.cjs             text eol=lf
+*.json            text eol=lf
+*.jsx             text eol=lf
 *.less            text
 *.ls              text
 *.map             text -diff
@@ -48,8 +48,8 @@
 *.sql             text
 *.styl            text
 *.tag             text
-*.ts              text
-*.tsx             text
+*.ts              text eol=lf
+*.tsx             text eol=lf
 *.xml             text
 *.xhtml           text diff=html
 
