--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.18",
     "@tanstack/react-query": "^5.36.2",
+    "@tanstack/react-query-devtools": "^5.37.1",
     "axios": "^1.6.8",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
