--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
       "prettier --write --ignore-unknown"
     ]
   },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
+  },
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -50,9 +53,9 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "globals": "^15.2.0",
-    "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier": "3.2.5",
+    "simple-git-hooks": "^2.11.1",
     "vite": "^5.2.11",
     "vite-plugin-svgr": "^4.2.0"
   }
