Run npm update --save

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-## GITATTRIBUTES FOR WEB PROJECTS: https://github.com/gitattributes/gitattributes/blob/master/Web.gitattributes
+## GITATTRIBUTES FOR WEB PROJECTS
 #
 # These settings are for any web project.
 #
